--- a/Settings/config.cfg
+++ b/Settings/config.cfg
@@ -85,7 +85,7 @@ ShowToolbar=1
 ShowTreeView=1
 ThumbBKColor=-8355712
 ThumbSize=75
-TreeHeightPercent=29
+TreeHeightPercent=28
 TreeWidthPercent=33
 
 [FormHistogram]
@@ -213,4 +213,10 @@ SearchHistory2=
 SearchHistory3=
 SearchHistory4=
 SearchHistory5=
+
+[FormAbout]
+MineBest1=999
+MineBest2=999
+SnakeBest1=0
+SnakeBest2=0
 
